# AIE6

00_AIM_Quicklinks/: README.md
01_Prompt Engineering and Prototyping Best Practices/: README.md
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  README.md
02_Embeddings_and_RAG/aimakerspace/: text_utils.py  vectordatabase.py
02_Embeddings_and_RAG/aimakerspace/openai_utils/: chatmodel.py  embedding.py  (+1 more)
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  ai_across_years_kg.json
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Finetuning_Embeddings/: Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb  Kam_Copy_of_Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb
10_Finetuning_Reasoning_Model/: Kam_Copy_of_AI_Makerspace_Unsloth_GRPO_Training.ipynb
11_Certification_Challenge/: AB_Testing_RAG_Agent.ipynb  README.md  pyproject.toml
13_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
14_Open_DeepResearch/: open-deep-research.ipynb
15_Open_Source_Endpoints/: Open_Source_RAG_Leveraging_Hugging_Face_Endpoints_through_LangChain.ipynb
15_Open_Source_Endpoints/Application_Start/: app.py
(+4 files in other folders)
