[project]
name = "08-evaluating-rag-with-ragas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=0.2.11",
    "langchain-community==0.3.14",
    "langchain-openai==0.2.14",
    "langchain-qdrant>=0.2.0",
    "langgraph==0.2.61",
    "numpy>=2.2.2",
    "unstructured>=0.14.8",
    "arxiv>=1.4.0",
    "langchain-huggingface>=0.0.5",
    "ragas>=0.1.3",
    "rank_bm25>=0.2.2",
    "langchain-cohere>=0.1.0",
    "pyppeteer>=1.0.2",
]
